--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "url": "https://github.com/hashicorp/rivet-graphql/issues"
   },
   "dependencies": {
-    "graphql": "^14.5.8",
-    "graphql-request": "^1.8.2"
+    "abort-controller": "^3.0.0",
+    "graphql": "^15.3.0",
+    "graphql-request": "^2.1.0-next.1"
   },
   "devDependencies": {
-    "jest": "^24.9.0",
-    "rewire": "^4.0.1"
+    "jest": "^26.1.0",
+    "rewire": "^5.0.0"
   },
   "homepage": "https://github.com/hashicorp/rivet-graphql#readme",
   "keywords": [
