--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "graphql": "^15.3.0",
-    "graphql-request": "^2.1.0-next.1"
+    "graphql-request": "^3.0.0"
   },
   "devDependencies": {
-    "jest": "^26.1.0",
-    "release": "^6.1.0",
+    "jest": "^26.4.2",
+    "release": "^6.3.0",
     "rewire": "^5.0.0"
   },
   "homepage": "https://github.com/hashicorp/rivet-graphql#readme",
