--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "graphql": "^15.3.0",
-    "graphql-request": "^3.0.0"
+    "graphql-request": "^3.0.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "jest": "^26.4.2",
