--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "jest": "^26.4.2",
     "release": "^6.3.0",
-    "rewire": "^5.0.0"
+    "rewire": "^5.0.0",
+    "typescript": "^4.6.2"
   },
   "homepage": "https://github.com/hashicorp/rivet-graphql#readme",
   "keywords": [
@@ -24,14 +25,16 @@
   ],
   "license": "MPL-2.0",
   "main": "index.js",
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hashicorp/rivet-graphql.git"
   },
   "scripts": {
-    "release:major": "release major && npm publish",
-    "release:minor": "release minor && npm publish",
-    "release:patch": "release patch && npm publish",
-    "test": "jest"
+    "release:major": "npm run generate:types && release major && npm publish",
+    "release:minor": "npm run generate:types && release minor && npm publish",
+    "release:patch": "npm run generate:types && release patch && npm publish",
+    "test": "jest",
+    "generate:types": "tsc -p ."
   }
 }
