--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "graphql-request": "^3.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "jest": "^26.4.2",
-    "release": "^6.3.0",
     "rewire": "^5.0.0",
     "typescript": "^4.6.2"
   },
@@ -31,9 +31,7 @@
     "url": "git+https://github.com/hashicorp/rivet-graphql.git"
   },
   "scripts": {
-    "release:major": "npm run generate:types && release major && npm publish",
-    "release:minor": "npm run generate:types && release minor && npm publish",
-    "release:patch": "npm run generate:types && release patch && npm publish",
+    "release:canary": "npm run generate:types && changeset publish --tag canary",
     "test": "jest",
     "generate:types": "tsc -p ."
   }
